blender crashes on entering sculpt mode when mesh has no faces #111255

Closed
opened 2023-08-18 10:04:07 +02:00 by heini · 5 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 527.56

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-17 23:26, hash: 0fb4c107db92

Caused by 1be70f22cc

Short description of error
If a mesh has no faces, entering sculpt mode will crash blender (factory defaults)

Exact steps for others to reproduce the error
create unfilled circle, enter sculpt mode

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 527.56 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-17 23:26, hash: `0fb4c107db92` Caused by 1be70f22ccb7ea1e75d600bf7083da9358fce06d **Short description of error** If a mesh has no faces, entering sculpt mode will crash blender (factory defaults) **Exact steps for others to reproduce the error** create unfilled circle, enter sculpt mode
heini added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-08-18 10:04:08 +02:00
Member

Hi, thanks for the report. No crash here in current master, instead I observed rise in memory usage (memory leak perhaps?)

Hi, thanks for the report. No crash here in current master, instead I observed rise in memory usage (memory leak perhaps?)
Author

Strange. I updated my gfx drivers and tried it on my linux laptop. Same result. On Linux I need to hard reset. On Windows it just freezes then quits to desktop after some time.
I uploaded the file I was testing it on, but there is nothing special about it as far as I can tell.

edit: I found some older builds on Linux, one from july 25 (no crash) another from aug 05 (crash)

Strange. I updated my gfx drivers and tried it on my linux laptop. Same result. On Linux I need to hard reset. On Windows it just freezes then quits to desktop after some time. I uploaded the file I was testing it on, but there is nothing special about it as far as I can tell. edit: I found some older builds on Linux, one from july 25 (no crash) another from aug 05 (crash)
Member

Can confirm the crash (going out of memory)

sculpting faceless meshes is generally a minefield (I recall even making a patch that prevents entering sculptmode on faceless meshes).
See related:

But the crash is new, will check.

Can confirm the crash (going out of memory) sculpting faceless meshes is generally a minefield (I recall even making a patch that prevents entering sculptmode on faceless meshes). See related: - #86940 - https://archive.blender.org/developer/D10966 - https://archive.blender.org/developer/D10851 But the crash is new, will check.
Philipp Oeser added
Status
Confirmed
Module
Sculpt, Paint & Texture
and removed
Status
Needs Triage
labels 2023-08-18 11:41:25 +02:00
Author

I only discovered it because I totally misremembered that you couldn't sculpt on wires only. Must have mixed it up with grease pencil sculpt mode. In 3.6 where it doesn't crash it behaves a little strange too, when I for example try to sculpt on a cube with a face only on one side (the face moves, but the connected edges won't update on screen)

I only discovered it because I totally misremembered that you couldn't sculpt on wires only. Must have mixed it up with grease pencil sculpt mode. In 3.6 where it doesn't crash it behaves a little strange too, when I for example try to sculpt on a cube with a face only on one side (the face moves, but the connected edges won't update on screen)
Member
Caused by 1be70f22ccb7ea1e75d600bf7083da9358fce06d @HooglyBoogly
Philipp Oeser added
Priority
High
and removed
Priority
Normal
labels 2023-08-18 12:27:41 +02:00
Hans Goudey self-assigned this 2023-08-19 04:13:34 +02:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-08-22 18:16:37 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-08-22 18:32:09 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#111255
No description provided.