Fix #111255: Sculpt mode crash for mesh with no faces